# makemore-pytorch

./: README.md  building_makemore_1.ipynb  building_makemore_2.ipynb  building_makemore_3.ipynb  building_makemore_4.ipynb  building_makemore_5.ipynb  micrograd_from_scratch_yay.ipynb  pyproject.toml
assignments/: building_makemore_1_exercises.ipynb  building_makemore_2_exercises.ipynb  building_makemore_3_exercises.ipynb
gpt/: bigram.py  gpt-dev.ipynb  train_output.txt  v2.py
